# zeroday

./: IDEA_ONLY.md  PROMPTS_BY_PHASE.md  README.md  START_HERE.md  pyproject.toml
docs/adr/: ADR-001-architecture.md
samples/c_family/: demo.c
samples/javascript/: demo.js
samples/python/: demo.py
src/zeroday/: __init__.py  cli.py  indexer.py  models.py  risk.py  scanner.py
tests/: test_cli.py  test_indexer.py  test_scanner.py
